--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -13,6 +13,8 @@ ft_atoi.c \
 ft_atoi_safe.c \
 ft_bzero.c \
 ft_calloc.c \
+ft_count_tab.c \
+ft_free_array.c \
 ft_isspace.c \
 ft_isalnum.c \
 ft_isalpha.c \
