Added ft_free_char_array to fix unmap_chunk

--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -15,6 +15,7 @@ ft_bzero.c \
 ft_calloc.c \
 ft_count_tab.c \
 ft_free_array.c \
+ft_free_char_array.c \
 ft_isspace.c \
 ft_isalnum.c \
 ft_isalpha.c \
