--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -54,8 +54,10 @@ ft_strtrim.c \
 ft_substr.c \
 ft_tolower.c \
 ft_toupper.c \
+get_arr_size.c \
 get_next_line.c \
 get_next_line_utils.c \
+grow_arrayc.c \
 w_calloc.c \
 w_free.c \
 w_kill.c \
